src/styles/components/Shortener.module.css
.shortenerContainer {
  display: flex;
  flex-direction: column;
  gap: 2.7rem;

  width: 100%;
  max-width: 960px;

  transition: .2s;
}

.shortenerContainer .inputBox {
  position: relative;
}

.shortenerContainer input {
  width: 100%;
  padding: .1rem;
  padding-left: calc(3.4rem + 2.4rem);
  border: 1px solid #6d6d6d;
  border-radius: 5px;
}

.shortedLinkContainer input {
  padding-left: 1.3rem;
}

.shortenerContainer .keyboardIcon {
  position: absolute;
  top: 0;
  bottom:0;
  left: 0;
  width: calc(2.4rem + 3.4rem);

  opacity: 0.5;
  background: url(/icons/keyboard.svg);
  background-size: 3.4rem;
  background-repeat: no-repeat;
  background-position: center;
}

.shortenerContainer p {
  margin-top: 1.4rem;
  line-height: 2.84rem;
  font-size: 1.4rem;
  color: #7c7c7c;
  text-align: justify;
}

.linkInputContainer,
.shortedLinkContainer {
  display: grid;
  grid-template-columns: calc(100% - 18.1rem - 1rem) 18.1rem;
  gap: 1rem;
}

.shortedLinkContainer {
  grid-template-columns: calc(100% - 5.3rem - 1rem) 5.3rem;
}

.shortedLinkContainer button,
.linkInputContainer button {
  width: 100%;
}

.shortedLinkContainer button {
  padding: .7rem .5rem .6rem .6rem;
  position: relative;
  transition: .1s;
}

.shortedLinkContainer button strong {
  display: none;
  font-weight: 400;
}

.shortedLinkContainer .copyAltIcon {
  background: url(/icons/copy-alt.svg);
  background-repeat: no-repeat;
  background-size: contain;
  background-position: center;
  width: 100%;
  height: 100%;
  display: block;

  filter: invert(1);
}


.mobileButtonContainer {
  display: none;

  margin-top: 1.1rem;
  text-align:  center;
}

.linkInputContainer button,
.mobileButtonContainer button {
  width: 18.1rem;
  z-index: initial;
}

.processingButton {
  animation: pulse 1s infinite alternate-reverse;
  position: relative;
}

.processingButton::after {
  content: ' ';
  position: absolute;
  animation: loading 1s infinite linear;
}

.shortMoreLink {
  text-align: right;
}

.shortMoreLink button {
  background: none;
  border: none;
  color: #000;

  display: inline-flex;
  align-items: center;

  outline: none;
}

.shortMoreLink button::after {
  content: ' ';
  display: inline-block;
  margin-left: .6rem;
  width: 2.4rem;
  height: 2.4rem;
  background: url(/icons/right-arrow.svg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: 2.4rem 2.4rem;
}

.copyPopBubble {
  background: #343434;
  font-size: 1.5rem;
  position: absolute;
  border-radius: 5px;
  line-height: 2.5rem;
  padding: 0 1.2rem;
  right: 0;
  top: calc(-2.5rem - 1.2rem);
  white-space: nowrap;

  opacity: 0;
  transition: .1s;
  transform: translateY(10px);
}

.copyPopBubble::after {
  margin-top: 2.5rem;
  content: ' ';
  width: 0; 
  height: 0; 
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-top: 8px solid #343434;
  position: absolute;
  margin-top: 2.3rem;
  margin-left: -2.2rem;
  z-index: 0;

}

.linkInputContainer {
  z-index: 10;
}

.copyPopRect {
  display: none;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;

  background: #343434;
  border-radius: 5px;
  z-index: -1;

  transition: .1s;

  font-size: 1.6rem;
}

.surnameContainer .invalidSurnameMessage {
  display: block;
  transform: translateY(-10px);
}

.surnameContainer .invalidSurnameMessage,
.invalidInput {
  color: #e32d2d;
  font-size: 1.6rem;
}

.shortedLinkContainer button.enable .copyPopBubble {
    opacity: 1;
    transform: translateY(0);
} 

/* Media Queries */

@media screen and (max-width: 550px) {
  .copyPopBubble {
    display: none;
  }

  .copyPopRect {
    display: block;
  }

  .mobileButtonContainer {
    display: block;
  }

  .linkInputContainer {
    display: block;
  }

  .linkInputContainer button {
    display: none;
  }

  .shortedLinkContainer {
    display: block;
  }

  .shortedLinkContainer button {
    margin-top: 1.7rem;
    display: grid;
    grid-template-columns: 3.4rem calc(100% - 3.4rem - 1.9rem);
    gap: 1.9rem;
    align-content: center;
  }
  

  .shortedLinkContainer button.enable {
    margin-top: 4.5rem;
  }

  .shortedLinkContainer button.enable .copyPopRect {
    margin-top: -2.5rem;
  }

  .shortedLinkContainer button strong {
    display: block;
  }
}

@keyframes pulse {
  from {
    opacity: 0.7;
  }
  to {
    opacity: 0.9;
  }
}

@keyframes loading {
  0% {
    content: ''
  }
  25% {
    content: '.'
  }
  50% {
    content: '..'
  }
  75%{
    content: '...'
  }
}

